--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,19 @@
 server:
-  port: 8080
+  port: 5000
 
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/kvp_bot
     username: vladbright
     password: vladbright
+#    data: classpath:data.sql
   jpa:
-    show-sql: true
+#    show-sql: true
     hibernate:
       ddl-auto: update
+    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+
+telegrambot:
+  token:
+  username: "@kvpSumduBot"
+  webHookPath: https://3e1aff334c62.ngrok.io
